Added static analysis tool, minor changes